################################################################################
# Change_Log
#
# (c) 2019 Kiewisz
# This code is licensed under GPL V3.0 license (see LICENSE.txt for details)
#
# Author: Robert Kiewisz
# Created: 2020-10-24
################################################################################

################################################################################
# v0.1 - Unpublished
################################################################################

# Mejor changes  ---------------------------------------------------------------

# Minor changes ----------------------------------------------------------------

# Bug Fix ----------------------------------------------------------------------

# Other ------------------------------------------------------------------------