@@ -17,3 +17,4 @@ library("readr")
 library("leaflet")
 library("tidyverse")
 library("purrr")
+library("geosed")
