@@ -13,4 +13,5 @@ function(input, output, session) {
   
   callModule(Buttons_server, "Home")
   callModule(Map_server, "Home")
-}
+
+  }
